--- a/demo/Podfile
+++ b/demo/Podfile
@@ -1,4 +1,7 @@
 
 #pod 'KSYLive', :git => 'https://github.com/ksvc/KSYLive_iOS.git'
-pod 'KSYLive_iOS', :path => '../'
+#pod 'KSYLive_iOS', :path => '../'
 
+#pod 'KSYGPULive_iOS', :git => 'https://github.com/ksvc/KSYLive_iOS.git'
+
+pod 'KSYGPULive_iOS', :path => '/Users/qianyi/Documents/KSYLive_iOS'
