--- a/doc/docset/Contents/Info.plist
+++ b/doc/docset/Contents/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ksyun.libksygpulive</string>
+	<string>com.ksyun.KSYLive_iOS</string>
 	<key>CFBundleName</key>
-	<string>libksygpulive Documentation</string>
+	<string>KSYLive_iOS Documentation</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -17,7 +17,7 @@
 	
 	
 	<key>DocSetFeedName</key>
-	<string>libksygpulive Documentation</string>
+	<string>KSYLive_iOS Documentation</string>
 	
 	<key>DocSetMinimumXcodeVersion</key>
 	<string>3.0</string>
