--- a/demo/KSYLiveDemo/Info.plist
+++ b/demo/KSYLiveDemo/Info.plist
@@ -30,6 +30,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>金山云出品</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>金山云出品</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
