--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ xcode_workspace: demo/KSYLiveDemo.xcworkspace
 xcode_scheme: KSYLiveDemo
 script:
 - echo "release to framework_${TRAVIS_TAG}.zip - $TRAVIS_TAG"
-- DST_DIR=framework/static
-- mkdir -p ${DST_DIR}
-- ZIP_URL=https://github.com/ksvc/KSYLive_iOS/releases/download/v2.0.0/staticGPUImage.zip
-- ZIP_FILE=${DST_DIR}/staticGPUImage.zip
-- curl ${ZIP_URL} -o ${ZIP_FILE}
-- unzip -q ${ZIP_FILE} -d ${DST_DIR}/
+- mkdir -p framework/static
+- wget https://github.com/ksvc/KSYLive_iOS/releases/download/v2.0.0/staticGPUImage.zip
+- unzip -q staticGPUImage.zip -d framework/static/
 - cd releaseFramework
 - "./release-libKSYLive.sh libksygpulive lite"
 - cd ../
