--- a/demo/KSYLiveDemo-framework.xcconfig
+++ b/demo/KSYLiveDemo-framework.xcconfig
@@ -1,3 +1,3 @@
 OTHER_CFLAGS = -I../framework/
-OTHER_LDFLAGS = $(inherited) -ObjC -all_load -framework libksygpulive -framework GPUImage -framework Bugly -framework YYImage -lstdc++.6 -lz  -lZipArchive -L../framework/
+OTHER_LDFLAGS = $(inherited) -ObjC -all_load -framework libksygpulive -framework GPUImage -framework Bugly -framework YYImage -lc++ -lz  -lZipArchive -L../framework/
 FRAMEWORK_SEARCH_PATHS = $(inherited) ../framework/ ../framework/static
