--- a/demo/KSYLiveDemo-dy-framework.xcconfig
+++ b/demo/KSYLiveDemo-dy-framework.xcconfig
@@ -1,4 +1,4 @@
 OTHER_CFLAGS = -I../framework/
-OTHER_LDFLAGS = $(inherited) -ObjC -all_load -framework libksygpulive -framework GPUImage -framework Bugly -framework YYImage -lstdc++.6 -lz -lZipArchive -L../framework/
+OTHER_LDFLAGS = $(inherited) -ObjC -all_load -framework libksygpulive -framework GPUImage -framework Bugly -framework YYImage -lc++ -lz -lZipArchive -L../framework/
 IPHONEOS_DEPLOYMENT_TARGET = 8.0
 FRAMEWORK_SEARCH_PATHS = $(inherited) ../framework/ ../framework/dynamic
